# data-plane-shared-libraries

./: .bazelignore  .bazelrc  .clang-tidy  .codespellrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc.yaml  BUILD  BUILD.bazel  README.md  WORKSPACE  buf.work.yaml  common_deps.bzl  cpp_deps.bzl  deps.bzl  java_deps.bzl  pnpm-lock.yaml
build_defs/aws/enclavewatcher/: BUILD.bazel  enclave-watcher.service  enclave_watcher.sh  start_debug_enclave.sh
docs/cpio/protobuf/: BUILD.bazel  auto-scaling-service.md  blob-storage-service.md  common.md  crypto-service.md  detailed-execution-result.md  instance-service.md  kms-service.md  metric-service.md  parameter-service.md  private-key-service.md  public-key-service.md  queue-service.md  validator-config.md
google_internal/aws_nitro_enclave/: BUILD.bazel  init_server_enclave  ssh_into_enclave_debugging.md
parc/azure/: .bazelrc  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  WORKSPACE.bzlmod  grpc.patch
parc/azure/tools/: generate_system_bazelrc
production/packaging/aws/: BUILD.bazel
src/aws/proxy/: BUILD.bazel  acceptor_pool.h  benchmark_test.cc  buffer.h  buffer_test.cc  client_session_pool.cc  client_session_pool.h  client_session_pool_test.cc  curl_client_test  curl_client_test.sh  freelist.h  freelist_test.cc  preload.cc  preload_test.cc  protocol.h  protocol_test.cc  proxy.cc  proxy_bridge.cc  proxy_bridge.h  proxy_bridge_test.cc  proxy_server.cc  proxy_server.h  proxy_server_test.cc  resolv_conf_getter_client.cc  resolv_conf_getter_server.cc  socket_types.h  socket_vendor.cc  socket_vendor_protocol.h  socket_vendor_server.cc  socket_vendor_server.h  socket_vendor_server_test.cc  socks5_state.cc  socks5_state.h  socks5_state_input_test.cc  socks5_state_test.cc  socks5_test.py
src/azure/encrypt_payload/: BUILD.bazel  encrypt_payload.cc
src/clients/async_client/: BUILD.bazel  async_http_client.h  mocks.h
src/clients/http_fetcher_async/: BUILD.bazel  curl_request_data.cc  curl_request_data.h  curl_request_queue.cc  curl_request_queue.h  curl_request_queue_test.cc  curl_request_worker.cc  curl_request_worker.h  curl_request_worker_test.cc  http_fetcher_async.h  multi_curl_http_fetcher_async.cc  multi_curl_http_fetcher_async.h  multi_curl_http_fetcher_async_test.cc  multi_curl_request_manager.cc  multi_curl_request_manager.h
src/communication/: BUILD.bazel  compression.cc  compression_brotli.cc  compression_brotli.h  compression_brotli_test.cc  compression_gzip.cc  compression_gzip.h  compression_gzip_test.cc  encoding_utils.cc  encoding_utils.h  encoding_utils_test.cc  framing_utils.cc  framing_utils.h  framing_utils_test.cc  json_utils.h  json_utils_test.cc  ohttp_utils.cc  ohttp_utils.h  ohttp_utils_test.cc  string_padder.cc  string_padder.h  string_padder_test.cc  uncompressed.cc  uncompressed.h  uncompressed_test.cc
src/concurrent/: BUILD.bazel  event_engine_executor.cc  event_engine_executor.h  event_engine_executor_test.cc  executor.h  mocks.h
src/core/async_executor/: BUILD.bazel  async_executor.cc  async_executor.h  async_executor_test.cc  async_executor_utils.h  async_executor_utils_test.cc  async_task.h  async_task_test.cc  error_codes.h  single_thread_async_executor.cc  single_thread_async_executor.h  single_thread_async_executor_benchmark_test.cc  single_thread_async_executor_test.cc  single_thread_priority_async_executor.cc  single_thread_priority_async_executor.h  single_thread_priority_async_executor_test.cc  typedef.h
src/core/config_provider/: BUILD.bazel  config_provider.cc  config_provider.h  config_provider_test.cc  env_config_provider.cc  env_config_provider.h  env_config_provider_test.cc  error_codes.h
src/core/curl_client/: BUILD.bazel  error_codes.h  http1_curl_client.cc  http1_curl_client.h  http1_curl_client_test.cc  http1_curl_wrapper.cc  http1_curl_wrapper.h  http1_curl_wrapper_test.cc
src/core/http2_client/: BUILD.bazel  error_codes.h  http2_client.cc  http2_client.h  http2_client_test.cc  http2_connection_pool_test.cc  http2_connection_test.cc  http_connection.cc  http_connection.h  http_connection_pool.cc  http_connection_pool.h
src/core/interface/: BUILD.bazel  errors.cc  (+26 more)
src/logger/: BUILD.bazel  logger.proto  request_context_impl.cc  request_context_impl.h  request_context_impl_die_test.cc  request_context_impl_non_prod.cc  request_context_impl_non_prod_test.cc  request_context_impl_prod.cc  request_context_impl_prod_test.cc  request_context_impl_test.h  request_context_logger.cc  request_context_logger.h  request_context_logger_force_otel_non_prod_test.cc  request_context_logger_force_otel_prod_test.cc  request_context_logger_non_prod_test.cc  request_context_logger_prod_test.cc  request_context_logger_test.h
src/metric/: BUILD.bazel  context.h  context_map.h  context_map_test.cc  context_nonprod_test.cc  context_prod_test.cc  context_test.h  definition.h  definition_test.cc  dp.h  dp_test.cc  key_fetch.h  key_fetch_test.cc  metric_router.cc  metric_router.h  metric_router_test.cc  udf.proto
src/telemetry/: BUILD.bazel  init_aws.cc  init_azure.cc  init_gcp.cc  init_local_ostream.cc  init_local_otlp.cc  metrics_recorder.cc  metrics_recorder.h  mocks.h  telemetry.cc  telemetry.h  telemetry_test.cc  trace_generator_aws.cc  trace_generator_aws.h  tracing.cc  tracing.h  xray_id_generator_aws_test.cc
src/util/: BUILD.bazel  core_dump_generator.cc  duration.cc  duration.h  duration_test.cc  execution_token.h  execution_token_test.cc  periodic_closure.cc  periodic_closure.h  periodic_closure_test.cc  process_util.cc  process_util.h  protoutil.cc  protoutil.h  protoutil_test.cc  read_system.cc  read_system_test.cc  rlimit_core_config.cc  rlimit_core_config.h  rlimit_core_config_test.cc  scoped_execution_token.h  scoped_execution_token_test.cc
testing/functionaltest-system/: .bazelignore  .bazelrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .versionrc.json  BUILD.bazel  CHANGELOG.md  Dockerfile  README.md  WORKSPACE  buf.yaml  deps.bzl  repos.bzl
testing/roma/: BUILD.bazel  README.md  callback_binary.cc  hello_world_binary.cc  hello_world_binary_test
(+4394 files in other folders)
