# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

[
    copy_file(
        name = "{}".format(dset_name),
        src = "@google_privacysandbox_apis//apis/privacysandbox/apis/parc/v0:{}".format(dset_name),
        out = "{}.pb".format(dset_name),
        visibility = ["//:__subpackages__"],
    )
    for dset_name in (
        "blob_descriptor_set",
        "parameter_descriptor_set",
        "parc_service_descriptor_set",
    )
]

filegroup(
    name = "clang_tidy_config",
    srcs = [".clang-tidy"],
)
